--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col"></div>
-                <div class="col"><h2>Contact Us</h2></div>
+                <div calss="header" class="col" ><h2>Contact Us</h2></div>
                 <div class="col"></div>
               </div>
             </div>
