--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#service">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">packages & pricing</a>
+                            <a class="nav-link" href="#packages & pricing">packages & pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
 
@@ -133,7 +133,7 @@
 
                         <h6 class="mb-20"></h6>
 
-                            <h6><p>Navigating the rapidly evolving cryptocurrency market can be confusing, challenging and risky without the help of a cryptocurrency consultant.</p>  
+                            <h6><p>Navigating the rapidly evolving cryptocurrency market can be confusing, challenging and risky without the help of a cryptocurrency consultant.</p>
                             <p>CryptoConsultz provides support for all levels of crypto-curious investors.
                             </p></h6>
                             <p class="card-text">
@@ -157,7 +157,7 @@
               <!-- ======./ About ======  -->
 
             <!-- ====== Start Services ======  -->
-              <section class="about section-padding" id='about'>
+              <section class="about section-padding" id='service'>
                 <div class="container">
                   <div class="row justify-content-center">
 
@@ -191,7 +191,7 @@
               <!-- ======./ Services ======  -->
 
             <!-- Packages & Pricing -->
-            <div>
+            <div id="packages & pricing">
             <div class="card">
             <div class="card-header">
             <div>
@@ -268,7 +268,7 @@
             <!-- End packages & pricing -->
 
             <!-- contact start here -->
-            <div class="container-fluid">
+            <div class="container-fluid" id="contact">
               <div class="row">
                 <!-- Header -->
                 <div class="col"></div>
@@ -277,8 +277,6 @@
               </div>
 
             <!-- Form -->
-            <form>
-
              <form>
                 <!--part I-->
                 <div class="form-row">
